nodejs/public/css/chat.css
body#chat{
	overflow:hidden;
}

body#chat .main{
	position:static;
}

#chat.small{
	font-size:12px;
}

.main #content{
	position:absolute;
	top:40px;
	bottom:4em;
	left:0;
	right:0;
	z-index:1;
	overflow: hidden;
	color:black;
	background-color:#f7f7f7;	
}

#chat #footer_container{
	background:none;
	font-size:12px;
	height:auto;
}

#chat #footer{
	padding:0 41px 4px 3px;
}
#chat.small #footer{
	padding:0 7px 2px 3px;
}

#chat #wompt{
	display:none;
}

#share_links{
	position:absolute;
	bottom:0;
	right:0;
	width:181px;
	height:4em;
}
.small #share_links{
	width:110px;
	left:0;
	right:auto;
}
.small #share_links > .pad{
	padding-top:4px;
}

#chat #input{
	position:absolute;
	bottom:0;
	left:0;
	right:0;
	height:4em;
	z-index:1;
}

#share_links,
#content #input{
	background-position:bottom left;
}

#input .container{
	position:absolute;
	top:7px;
	left:10.4em;
	bottom:7px;
	right:187px;
	color:#444;	
	overflow:visible;
	width:auto;
}
.small #input .container{
	left:117px;
	right:5px;
	bottom:5px;
	top:5px;
}


#input #own_name {
	position:absolute;
	width:9.5em;
	padding:.9em .4em 0 .4em;
	text-align:right;
	font-weight:bold;
}
.small #input #own_name{
	display:none;
}

#input #message{
	background-color:#fff;
	width:100%;
	height:100%;
}

#input #message,
#input #input_overlay{
	display:block;
	-vendor-border-radius:5px;
	-vendor-box-shadow:rgba(0,0,0,0.5) 0 0px 5px;
	-vendor-box-sizing:border-box;
	padding:4px 7px;	
	position:absolute;
	top:0;
	left:0;
	bottom:0;
	right:0;
	background:#fff top repeat-x data-url(/images/structure/5px_fade_to_white.gif);
}

/* connection status input overlay */
#input #input_overlay{
	color:#888;
	background-color: #f0f0f0;
}

/* only applies when message input ISN'T a textarea */
#input div#message{
	overflow:hidden;
}

a.try_now{
	display:none;
}

#chat #messages{
	padding-bottom:0px;
	overflow: hidden;
	position:absolute;
	top:0;
	left:0;
	right:181px;
	bottom:0;
	z-index:1;
}
#chat.hide_userlist #messages{
	right:0;
}
#chat.small #messages{
	right:141px;
}
#chat.small.hide_userlist #messages{
	right:0;
}

#chat #messages,
#user_list{
	-vendor-transition:right 0.3s ease-in-out;
}

#messages a,
#input .container a{
	color:#286ea0;
}

#messages_scroller{
	position:absolute;
	width:100%;
	max-height:100%;
	overflow-y:auto;
	bottom: 0px;
}
#message_list {
	width: 100%;
	table-layout:fixed;
}

.line td{
	padding:0 .1em .2em .1em;
	position:relative;
}

tr.first {
	background: left 0 repeat-x data-url(/images/chat/line_back.png);
}

tr.first td {
	padding-top:0.3em;
}

.line.system{
	background-color:#eee;
	color:#888;
}
.line.system td{
	padding:.8em 3em;
	text-align:center;
}

.line.mention{
	background-color: #ffb;
}

td.name {
	width: 10em;
	padding-right: 10px;
	text-align:right;
	font-weight:bold;
	word-wrap:normal;
	word-break:keep-all;	
}

.msg {
	padding-bottom:0.2em;
	word-wrap:break-word;
}


/* Actions section */
#actions{
	position:absolute;
	height:25px;
	right:30px;
	top:0px;
	padding:3px 5px 5px 5px;
	z-index:2;
	background-color:rgba(255,255,255,0.5);
	border:1px solid #eee;
	border-top:none;
	border-bottom-right-radius:5px;
	border-bottom-left-radius:5px;
	line-height:22px;
}

#actions a{
	float:left;
	display:block;
	color:#444;
	text-decoration:none;
}

#actions a:active{
	margin-top:2px;
}

.ts {
	position:absolute;
	top:1px;
	right:0;
	color:#999;
	padding:3px 6px;
	font-size:0.9em;
	background:#f7f7f7;
	display:none;
}

tr:hover .ts {
	display:block;
}

